--- a/App/Bioscopify/app/src/main/res/menu/action_bar_filter_trash.xml
+++ b/App/Bioscopify/app/src/main/res/menu/action_bar_filter_trash.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/mybutton"
-        android:icon="@drawable/ic_filter"
+        android:id="@+id/btnTrash"
+        android:icon="@drawable/ic_delete_black_24dp"
         android:title=""
         app:showAsAction="always" />
 </menu>
