--- a/App/Bioscopify/app/src/main/res/layout/activity_detail.xml
+++ b/App/Bioscopify/app/src/main/res/layout/activity_detail.xml
@@ -24,36 +24,36 @@
 
     <ImageView
         android:id="@+id/posterTv"
-        android:layout_width="172dp"
-        android:layout_height="230dp"
+        android:layout_width="102dp"
+        android:layout_height="124dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:background="@android:drawable/dialog_holo_light_frame"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTv"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
         app:srcCompat="@android:color/background_light" />
 
     <TextView
         android:id="@+id/titleTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
         android:autoSizeTextType="uniform"
+        android:background="#ba232323"
+        android:paddingBottom="6dp"
+        android:paddingTop="6dp"
+        android:shadowColor="#0b0b0b"
+        android:shadowRadius="2"
         android:text="TextView"
-        android:textColor="@color/colorWhite"
         android:textAlignment="center"
+        android:textColor="@color/colorWhite"
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="serif"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        android:shadowColor="#0b0b0b"
-        android:shadowRadius="2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/languageTv"
@@ -61,9 +61,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textColor="@color/colorWhite"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/posterTv"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
@@ -74,9 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
         android:textColor="@color/colorWhite"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/posterTv"
         app:layout_constraintTop_toBottomOf="@+id/languageTv" />
@@ -87,9 +89,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:text="TextView"
         android:textColor="@color/colorWhite"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/posterTv"
         app:layout_constraintTop_toBottomOf="@+id/ageTv" />
@@ -100,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="Tijd: "
+        android:text="Time available: "
         android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/posterTv" />
@@ -109,7 +112,6 @@
         android:id="@+id/movietimeTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:drawable/dialog_holo_light_frame"
         android:clickable="true"
@@ -139,14 +141,17 @@
         android:id="@+id/fabDetailFavorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:clickable="true"
+        android:cropToPadding="false"
         android:onClick="addToFavorites"
+        android:paddingBottom="6dp"
+        android:paddingTop="6dp"
         android:src="@drawable/ic_not_enabled_favorite"
         app:backgroundTint="@color/colorWhite"
-        app:layout_constraintBottom_toTopOf="@+id/languageTv"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/posterTv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
