--- a/App/Bioscopify/app/src/main/res/layout/activity_ticket_select.xml
+++ b/App/Bioscopify/app/src/main/res/layout/activity_ticket_select.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.example.rickyberg.bioscopify.PresentationLayer.TicketSelectActivity">
 
     <!-- TODO: Update blank fragment layout -->
@@ -19,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.33" />
+        app:layout_constraintGuide_percent="0.35" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline5"
@@ -36,6 +37,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:scaleType="centerCrop"
         android:src="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -52,7 +55,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textSize="14sp"
+        android:textColor="@color/colorWhite"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -66,6 +71,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Junior 0-11"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
@@ -78,6 +84,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Normal 12+"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/juniorTv" />
@@ -90,6 +97,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Senior 65+"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/normalTv" />
@@ -100,6 +108,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="€ 7.50"
+        android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/juniorTv" />
 
@@ -109,6 +118,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="€ 9.00"
+        android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/normalTv" />
 
@@ -118,6 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="€ 8.50"
+        android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="@+id/seniorTv" />
 
@@ -128,20 +139,22 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:text="€ Total"
+        android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toBottomOf="@+id/seniorPriceTv" />
 
     <Button
         android:id="@+id/btnTicketSelect"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="76dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="@color/colorAccent"
+        android:paddingBottom="6dp"
+        android:paddingTop="6dp"
         android:text="Select Seats"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.871"
+        app:layout_constraintHorizontal_bias="0.396"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
