--- a/App/Bioscopify/app/src/main/res/layout/processing_activity.xml
+++ b/App/Bioscopify/app/src/main/res/layout/processing_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.example.rickyberg.bioscopify.PresentationLayer.ProcessingActivity">
 
     <RelativeLayout
@@ -13,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,6 +39,7 @@
                 android:layout_marginTop="30dp"
                 android:text="Payment is processing"
                 android:textAlignment="center"
+                android:textColor="@color/colorWhite"
                 android:textSize="24sp" />
 
             <ImageView
@@ -54,7 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/icon" />
+            android:src="@drawable/icon"
+            android:tint="@color/colorWhite" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
