--- a/App/Bioscopify/app/src/main/res/layout/confirmation_activity.xml
+++ b/App/Bioscopify/app/src/main/res/layout/confirmation_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.example.rickyberg.bioscopify.PresentationLayer.ConfirmationActivity">
 
     <RelativeLayout
@@ -26,6 +27,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="52dp"
+            android:background="@color/colorWhite"
             android:src="@drawable/qr_code" />
 
         <TextView
@@ -36,6 +38,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="44dp"
             android:text="Movie Title"
+            android:textColor="@color/colorWhite"
             android:textSize="24sp" />
 
         <TextView
@@ -47,6 +50,7 @@
             android:layout_marginStart="64dp"
             android:layout_marginTop="41dp"
             android:text="Tickets:"
+            android:textColor="@color/colorWhite"
             android:textSize="18sp" />
 
         <TextView
@@ -57,6 +61,7 @@
             android:layout_alignBottom="@+id/textview8"
             android:layout_centerHorizontal="true"
             android:text="Number"
+            android:textColor="@color/colorWhite"
             android:textSize="18sp" />
 
         <TextView
@@ -67,6 +72,7 @@
             android:layout_alignBottom="@+id/time_tv"
             android:layout_alignStart="@+id/textview8"
             android:text="Time:"
+            android:textColor="@color/colorWhite"
             android:textSize="18sp" />
 
         <TextView
@@ -77,6 +83,7 @@
             android:layout_below="@+id/ticket_tv"
             android:layout_marginTop="16dp"
             android:text="Time movie"
+            android:textColor="@color/colorWhite"
             android:textSize="18sp" />
     </RelativeLayout>
 
